@@ -1,3 +1,7 @@
+[29 June 2007]
+
+* Add :ignore_sti option to allow next and previous to iterate over all models.
+
 [3 June 2007]
 
 * Improve STI ordering
